--- a/.docker/rabbitmq/docker-compose.yml
+++ b/.docker/rabbitmq/docker-compose.yml
@@ -7,3 +7,5 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+    volumes:
+      - ./definitions.json:/etc/rabbitmq/definitions.json
