--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
-spring.rabbitmq.exchange=paulosalonso
-spring.rabbitmq.queue.demo=demo
+spring.rabbitmq.exchange=demo-exchange
+spring.rabbitmq.queue.demo=demo-queue
